<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="bio"
            type="com.example.myapplication2.data.Bio" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D67474"
    android:orientation="vertical"
    tools:context=".MainActivity">

     <ImageView
        android:id="@+id/image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/image_description"
        app:srcCompat="@drawable/ic_launcher_foreground" />

     <TextView
        android:id="@+id/textView"
        style="@style/namestyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
         android:text="@{bio.name}" />

     <EditText
        android:id="@+id/enter_hobies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/auto_fill_hints"
        android:ems="10"
        android:hint="@string/enter_hobbies"
        android:inputType="text" />

     <Button
        android:id="@+id/done_button"
        style="@style/general_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/done" />

     <TextView
        android:id="@+id/hobbies_text"
        style="@style/general_style"
         android:text="@{bio.hobbies}"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
         />

     <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView2"
            style="@style/general_style"
            android:fontFamily="@font/acme"
            android:lineSpacingMultiplier="2"
            android:text="@string/my_bio" />
     </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>
</layout>